# DD2358-Software-Engineering-HPC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Exercise-2/: matrix.c  matrix_test.cpp
Exercise-3/: benchmark.c  blas_matrix.c  blas_test.cpp
Exercise-4/: Dockerfile  tarball.sh
Exercise-Bonus/: libxsmm_matrix.c
data/: execution_time.gp  flops.gp  xsmm_flops.gp
include/: matrix.h
